# ipendulum

./: .gitignore  .gitmodules  Abstract.md  Dockerfile  Inverted Pendulum.ipynb  LICENSE  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
implementation/: .gitignore  Cargo.toml  Dockerfile  Embed.toml  README.md  openocd.gdb
implementation/.cargo/: config.toml
implementation/.devcontainer/: devcontainer.json
implementation/data/: step_50_percent_duty  step_50_percent_duty.bak  step_50_percent_duty_parsed
implementation/src/: encoder.rs  encoders.rs  globals.rs  init.rs  interrupts.rs  lib.rs  main.rs  panic_behavior.rs  time.rs  timing.rs  types.rs  utils.rs
simulation/: Inverted Pendulum.ipynb  abstract.ipynb  gains-derivation.ipynb  lagrang.ipynb  placeholder.ipynb
