[package]
authors = ["seanybaggins <seli2854@colorado.edu>"]
edition = "2018"
readme = "README.md"
name = "implementation"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
stm32f3xx-hal = {version = "0.6.1", features = ["stm32f303xc"]}
panic-semihosting = "0.5.6"
rtt-target = {version = "0.3.0", features = ["cortex-m"]}
#panic-halt = "0.2.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "implementation"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
