[package]
authors = ["seanybaggins <seli2854@colorado.edu>"]
edition = "2018"
readme = "README.md"
name = "implementation"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.10"
stm32f3xx-hal = {path = "stm32f3xx-hal", features = ["stm32f303xc", "rt", "unproven"]}

#cortex-m-semihosting = "0.3.3"
#panic-semihosting = "0.5.6"
#rtt-target = {version = "0.3.0", features = ["cortex-m"]}
#panic-rtt-target = "0.1.1"
defmt-rtt = "0.2.0"
panic-probe = {version = "0.2.0", features = ["print-defmt"]}

defmt = "0.2.0"
l298n = {path = "../drivers/l298n"}
es38 = {path = "../drivers/es38"}
embedded-hal = "0.2.4"
embedded-time = "0.10.1"
#panic-halt = "0.2.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# this lets you use `cargo fix`!
[[bin]]
name = "implementation"
test = true
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[features]
default = [
    "defmt-debug",  
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
